--- a/.github/workflows/optimizer.yml
+++ b/.github/workflows/optimizer.yml
@@ -1,8 +1,9 @@
 name: Cloud Cost Optimizer
 
 on:
-  schedule:
-    - cron: '*/1 * * * *'  # ⏱️ Runs automatically every 1 minute (UTC)
+    schedule:
+      - cron: '*/1 * * * *'
+    workflow_dispatch:
 
 jobs:
   run-optimizer:
