🔁 Updated GitHub Actions to run every 10 minutes automatically

--- a/.github/workflows/optimizer.yml
+++ b/.github/workflows/optimizer.yml
@@ -2,8 +2,7 @@ name: Cloud Cost Optimizer
 
 on:
     schedule:
-      - cron: '*/1 * * * *'
-    workflow_dispatch:
+      - cron: '*/10 * * * *'  # Runs every 10 minutes
 
 jobs:
   run-optimizer:
